Distinguish between fragment & activity viewmodel - all view models still share the same scope - that of state fragment - get rid of onCreate() event in viewmodels (use constructor instead) - attach fragment viewmodel onResume() & onPause() events to fragment's events - attach all viewmodel's onDestroy() event to state fragment onDestroy()

--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -7,7 +7,7 @@
         <import type="android.text.Html" />
         <variable
             name="postViewModel"
-            type="com.ondrejruttkay.architecturedemo.viewmodel.PostViewModel" />
+            type="com.ondrejruttkay.architecturedemo.viewmodel.PostComponentViewModel" />
     </data>
 
     <android.support.v7.widget.CardView
