--- a/app/src/main/res/layout/fragment_edit_post.xml
+++ b/app/src/main/res/layout/fragment_edit_post.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.ondrejruttkay.architecturedemo.viewmodel.EditPostViewModel" />
+            type="com.ondrejruttkay.architecturedemo.viewmodel.EditPostComponentViewModel" />
 
     </data>
 
