--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.ondrejruttkay.architecturedemo.viewmodel.PostListViewModel" />
+            type="com.ondrejruttkay.architecturedemo.viewmodel.PostListComponentViewModel" />
     </data>
 
     <FrameLayout
